added some theory for linreg and knearest

--- a/notes/ch1/ch1.ipynb
+++ b/notes/ch1/ch1.ipynb
@@ -243,8 +243,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the above example, linear regression is an example of model-based learning. If we use an instance-based learning algorithm, like K-neighbors Regressor, we get a different prediction. *k-nearest neighbors* takes a new datapoint and finds the *k* closest datapoints in the training data and outputs their average. For example, given Cyprus' GDP per capita (\\$22,587), you will find Slovenia (\\$20,732), Portugal (\\$19,121) and Spain (\\$25,864) with life satisfactions of 5.7, 5.1 and 6.5, respectively. Using a $k=3$ *k-nearest neighbors* regression, we average these three values to get 5.77, which is pretty close to the model-based prediction. "
+    "In the above example, linear regression is an example of model-based learning. If we use an instance-based learning algorithm, like K-neighbors Regressor, we get a different prediction. *k-nearest neighbors* takes a new datapoint, finds the *k* closest datapoints in the training data, and outputs their average. For example, given Cyprus' GDP per capita (\\$22,587), you will find Slovenia (\\$20,732), Portugal (\\$19,121) and Spain (\\$25,864) with life satisfactions of 5.7, 5.1 and 6.5, respectively. Using a $k=3$ *k-nearest neighbors* regression, we average these three values to get 5.77, which is pretty close to the model-based prediction. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
