added some theory for linreg and knearest

--- a/notes/ch1/ch1.ipynb
+++ b/notes/ch1/ch1.ipynb
@@ -249,7 +249,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Bonus:**  \n",
+    "Deriving Linear Regressor:  \n",
+    "Minimize the following *loss function* wrt coefficient vector $\\beta$:\n",
+    "$$\\text{RSS}(\\beta) = (\\mathbf{y} - \\mathbf{X} \\beta )' (\\mathbf{y} - \\mathbf{X} \\beta)$$\n",
+    "Normal Equation: \n",
+    "$$\\frac{\\partial}{\\partial \\beta} (\\mathbf{y} - \\mathbf{X} \\beta )' (\\mathbf{y} - \\mathbf{X} \\beta) \n",
+    "= 2\\mathbf{X}'(\\mathbf{y} - \\mathbf{X} \\beta) = 0 \\\\\n",
+    "\\implies \\mathbf{X}'\\mathbf{X}\\beta = \\mathbf{X}'y \\\\\n",
+    "\\implies \\hat{\\beta} = (\\mathbf{X}'\\mathbf{X})^{-1} \\mathbf{X}'y\n",
+    "$$\n",
+    "  \n",
+    "Nearest Neighbors:  \n",
+    "$$\\hat{Y}(x) = \\frac{1}{k} \\sum _ {x_i \\in N_k (x)} y_i$$  \n",
+    "where $N_k (x)$ is the neighborhood of $x$ defined by the $k$ closest points $x_i$ in the training sample. "
+   ]
   },
   {
    "cell_type": "markdown",
