--- a/notes/ch1/ch1.ipynb
+++ b/notes/ch1/ch1.ipynb
@@ -272,6 +272,95 @@
     "## Main Challenges of Machine Learning  \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Takes large quantities of data (even simple algorithms outperform complex ones with sufficient data).  \n",
+    "* Training data must be representative in order to generalize well. Training data with many outliers and noise will affect performance.   \n",
+    "* Data must not contain too many irrelevant features (weed out with *feature selection*)  \n",
+    "* Overfitting or underfitting training data leads to poor generalization  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing and Validating  \n",
+    "\n",
+    "To test how well a model generalizes, it is customary to split data into a *training set* and *test set*, train the model on the training set, and evaluate the model on the test set. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hpyerparameter Tuning and Model Selection  \n",
+    "\n",
+    "* To decide between two differing models (eg linear and polynomial) evaluate on the test set.  \n",
+    "* To tune hyperparameters of a particular model (eg regularization), use *holdout validation*. Hold out part of the training set (called the *validation* or *development set*) and use this set to test the models trained on the training set. Models are trained with varying hyperparameters to decide which parameter value yields best results.  \n",
+    "* If the validation set or training set is too small, the above method is unfit.   \n",
+    "* *cross validation*: Each mode is evaluated on multiple small validation sets, and the average of the evaluations is used to evaluate the model. However, the training time is multiplied by the number of validation sets.  \n",
+    "\n",
+    "### Data Mismatch  \n",
+    "\n",
+    "* Sometimes the only available training data is not representative of data used in production (e.g. training an image classification mobile app on images retrieved from the internet)  \n",
+    "* *Validation* and *test sets* must be as representative as possible.  \n",
+    "* If model performs poorly on validation set, there are two possibilities: Overfitting to training data, or data mismatch.  \n",
+    "* Hold *train-dev* set aside from *training set*. If validation on *train-dev* set performs well, rule out overfitting to training data. Then, if validation on validation set and test sets is poor, it is possible to assume data mismatch. \n",
+    "\n",
+    "\n",
+    "### No Free Lunch Theorem  \n",
+    "* Without making any assumptions, there is no reason to prefer one model over another.  \n",
+    "* In practice, make reasonable assumptions of functional form of data (linear, nonlinear, etc) to choose models to evaluate.  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises  \n",
+    "1. How would you define Machine Learning? \n",
+    "   1. Optimization of a certain task dealing with data, given some measure of performance.    \n",
+    "2. Can you name four types of problems where it shines? \n",
+    "   1. It is great for prediction, classification, optimization without a clear analytic or algorithmic solution, and automation of tasks that rely on data.  \n",
+    "3. What is a labeled training set? \n",
+    "   1. A training set with the desired option that the model should output for each instance of data.  \n",
+    "4. What are the two most common supervised tasks? \n",
+    "   1. Classification and prediction.  \n",
+    "5. Can you name four common unsupervised tasks\n",
+    "   1. Clustering, Detection, visualization and dimensionality reduction, association rule learning. \n",
+    "6. What type of Machine Learning algorithm would you use to allow a robot to walk in various unknown terrains? \n",
+    "   1. Reinforcement learning.  \n",
+    "7. What type of algorithm would you use to segment your customers into multiple groups?  \n",
+    "   1. Clustering \n",
+    "8. Would you frame the problem of spam detection as a supervised learning prob‐ lem or an unsupervised learning problem?\n",
+    "   1. Semi-supervised. Some spam email has obvious characteristics and can be labeled as spam without any complex manipulation. Others are more subtle and may not have a clear label.  \n",
+    "9.  What is an online learning system?\n",
+    "    1.   System that is trained incrementally by feeding individual datapoints or mini-batches.  \n",
+    "10. What is out-of-core learning?  \n",
+    "    1.  Machine learning systems that are not contained in a single cpu core.  \n",
+    "11. What type of learning algorithm relies on a similarity measure to make predictions?\n",
+    "    1.  instance-based learning. \n",
+    "12. What is the difference between a model parameter and a learning algorithm’s hyperparameter? \n",
+    "    1.  A model parameter is endogenous to the model and calculated by the data, while hyperparameters are exogenous and selected manually.  \n",
+    "13. What do model-based learning algorithms search for? What is the most common strategy they use to succeed? How do they make predictions?  \n",
+    "    1.  model-based learning-algorithms search for the relationship between independent and dependent variables. The model makes assumptions of the functional form of the relationship between variables and optimizes its parameters with respect to a performance measure (an objective function). The model is then a function with optimized parameters, and we need only input the independent variables from new data to make predictions about the dependent variable.  \n",
+    "14. Can you name four of the main challenges in Machine Learning?  \n",
+    "    1. Requires large quantities of data, training data must be representative, data must not contain too many irrelevant features, and model must not over or underfit to training data. \n",
+    "15. If your model performs great on the training data but generalizes poorly to new instances, what is happening? Can you name three possible solutions?  \n",
+    "    1.  It is possible that the model is overfitted to the training data, or there is a mismatch between the testing data and data used in production. To avoid this, consider splitting data to *training* and *testing*, regularizing data and tuning hyperparameters with *validation set*, or using *test-dev* set to determine whether model is being overfitted or there is a data mismatch.  \n",
+    "16. What is a test set and why would you want to use it?\n",
+    "    1.  Test set is a subsection of data to use to evaluate the model trained on training data. Without test set, we will have no indication of how well a model will generalize and may easily end up overfitting to traning data.  \n",
+    "17. What is the purpose of a validation set?\n",
+    "    1.  validation set helps decide on hyperparameters by evaluating models trained on different hyperparameters. \n",
+    "18. What can go wrong if you tune hyperparameters using the test set?\n",
+    "    1.  hyperparameters will be overfitted on the test data and we would not know how well the hyperparameters will generalize.  \n",
+    "19. What is repeated cross-validation and why would you prefer it to using a single validation set?  \n",
+    "    1.  When validation and training sets are too small, it yields poor evaluations of the hyperparameter tuned models. Instead, each model can be evaluated on multiple, smaller validation sets for each hyperparameter value and the evaluations can be averaged to yield a better indication of model performance under those hyperparameter values.  \n"
+   ]
   }
  ],
  "metadata": {
